--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>Somridhhi Digital Pvt. Ltd</title>
 </head>
 
-<body>
+<body class="font-sans">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
